--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,7 @@
 # main links links
 main:
   - title: "CV"
-    url: /cv/
+    url: files/data_analyst_cv.pdf
     
   - title: "Portfolio"
     url: /portfolio/
