--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,7 @@
 # main links links
 main:
   - title: "CV"
-    url: files\Sebastian_Jackson_CV.pdf
+    url: files\Sebastian_Jackson_CV1.pdf
     
   - title: "Portfolio"
     url: /portfolio/
