--- a/_config.yml
+++ b/_config.yml
@@ -24,8 +24,8 @@ author:
   avatar           : "profile.png"
   name             : "Sebastian Jackson"
   pronouns         : # example: "she/her"  
-  bio              : "Aspiring Data Analyst"
-  location         : "York, United Kingdom"
+  bio              : "Pricing Analyst"
+  location         : "Leeds, United Kingdom"
   employer         : 
   uri              : # URL
   email            : "sebsjackson@hotmail.co.uk" 
